# bevy_shade

./: .gitignore  Cargo.toml  README.md  TODO.md  image.ppm  octrees.json  package.json  svelte.config.js  vite.config.js  voxels.json  zed.md
.cargo/: config.toml
.github/workflows/: static.yml
assets/shaders/: compute.wgsl  fragment-cooleffect2.wgsl  fragment.wgsl  fragment_temp.wgsl
lib/: .old_fragment.bak.rs  compute.rs  cpu.rs  fragment.rs  js_reader.rs  lib.rs  main.rs
lib/shaders/: compute.rs  fragment.rs  lib.rs  mod.rs
lib/shaders/octree/: mod.rs  octree_types.wgsl  settings_plugin.rs
lib/testing/: basics.rs  many_changes_octree.rs  mod.rs  octree.rs
src/: app.css  app.html  js_reader.js  js_reader.rs  main.rs
src/lib/: callback.js  pocketbase.js  util.js  wgputoy.js
src/lib/canvas/: Canvas.svelte  stores.js
src/lib/header/: Header.svelte
src/lib/text_edit/: text_edit.svelte
src/routes/: +layout.svelte  +page.svelte  +page.svelte.bak
src/routes/login/: +page.svelte
src/routes/shader/: +page.svelte
src/sass/: variables.scss
src/wgputoy/: package.json  wgputoy.d.ts  wgputoy.js  wgputoy_bg.js  wgputoy_bg.wasm.d.ts
static/: global.css  js_reader.js
static/shade/: bevy_shade.js  package.json
