[package]
name = "bevy_shade"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "bevy_pbr",           # can delete after: 13175 is resolved
    "multi_threaded",
    "webgpu",
    "file_watcher",
    "x11",
    # "dynamic_linking"
] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3", features = ["Window"] }
js-sys = "0.3"
bytemuck = "1.16.0"
encase = "0.8.0"
crossbeam-channel = "0.5.12"
zerocopy = { version = "0.7.34", features = ["derive"] }
# cgmath = "0.18.0"
futures = "0.3.30"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
glam = "0.27.0"
rayon = "1.10.0"

[features]
readback = []

[lib]
name = "bevy_shade_lib"
path = "lib/lib.rs"

[[bin]]
name = "bevy_shade"
path = "lib/main.rs"

[[bin]]
name = "bevy_shade_cpu"
path = "lib/cpu.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[build]
target = "wasm32-unknown-unknown"
